styles.css
body {
    font-family: 'Open Sans', sans-serif;
    background: #f9fafc;
    margin: 20px;
}
nav ul {
    list-style-type: none;
    padding-left: 0;
    display: flex;
    flex-direction: column;
}
nav ul li {
    padding-bottom: 0.5em;
}
a {
    text-decoration: none;
    color: #69696a;
}
a.active {
    color: #000;
}
.button-container {
    display: flex;
    align-content: center;
}
.button {
    color: #FFF;
    background-color: #000;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    border: none;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    height: 40px;
    width: 100%;
    border-radius: 20px;
}
.content {
    color: #69696a;
    border-left: 3px solid #69696a;
    padding-left: 10px;
    margin-bottom: 25px;
}
@media only screen and (min-width: 768px) {
    nav ul {
        flex-direction: row;
        align-items: baseline;
    }
    nav ul li:first-child {
        flex: 1;
    }
    .button {
        display: flex-block;
        width: auto;
        padding: 0 20px;
    }
    .content {
        width: 50vw;
    }
}

